# Enzyme-example

./: CMakeLists.txt  README.md  adept-code.cpp  base-code.cpp
Enzyme-experiments/: README.md  compile.sh  dockerfile  virtual-function-fixed.cpp  virtual-function.cpp
adept/: adept_arrays.h  adept_source.h
